# genai-stack

./: .dockerignore  .gitignore  bot.py  chains.py  clean.cyp  create_embeddings.ipynb  docker-compose-regestaimperii.yml  docker-compose-sozinianer.yml  docker-compose.yml  env.example  front-end2.Dockerfile  loader.Dockerfile  loader.py  ollama_entrypoint.sh  product_family  readme.md  requirements.txt  seed-databases.sh  template.yml  utils.py
backups/: download.sh
build-context/: Dockerfile  api.py  auth.yaml  auth.yaml.example  bot.py  chains.py  loader.py  pyproject.toml  streamlit-entrypoint.sh  utils.py
front-end/: package-lock.json
front-end/src/lib/: chat.store.js  generation.store.js
front-end2/: package-lock.json  package.json  vite.config.ts
front-end2/src/: App.tsx  types.ts
front-end2/src/components/chat/: Chat.tsx  Message.tsx  Messages.tsx  Textinput.tsx
front-end2/src/components/meta/: Meta.tsx
