[tool.poetry]
name = "genai-stack"
version = "0.1.0"
description = ""
authors = ["Stefan Armbruster <stefan@armbruster-it.de>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
neo4j = "^5.26.0"
python-dotenv = "^1.0.1"
streamlit = "^1.39.0"
streamlit-authenticator = "^0.4.1"
uvicorn = "^0.32.0"
langchain = "^0.3.7"
langchain-ollama = "^0.2.0"
langchain-huggingface = "^0.1.2"
stqdm = "^0.0.5"
langchain-community = "^0.3.5"
langchain-aws = "^0.2.6"
langchain-openai = "^0.2.5"
langchain-google-genai = "^2.0.4"
fastapi = "^0.115.4"
sse-starlette = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
ruff = "^0.0.263"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

